删除部分内容,增加部分注释,修改主页tab实现,增加首页Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
 
+
+
+    <!--behavior-->
+    <string name="bnv_behavior">com.kimiffy.cn.biubiu.utils.behavior.BottomNavigationViewBehavior</string>
+
+
+
+
     <!--全局-->
     <string name="app_name">BiuBiu</string>
     <string name="home_title">首页</string>
