--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,13 @@
     <string name="project_title">项目</string>
     <string name="me_title">我</string>
 
+    <string name="collect">收藏</string>
+    <string name="collect_success">收藏成功</string>
+    <string name="collect_fail">收藏失败</string>
+    <string name="cancel_collect_success">取消收藏</string>
+    <string name="cancel_collect_fail">取消收藏失败</string>
+    <string name="share">分享</string>
+
 
     <!--首页-->
 
@@ -26,5 +33,7 @@
 
 
     <!--公众号-->
+
+
 
 </resources>
